navbar and basic content for landing page for desktop

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,5 @@
 .App {
-  min-height: 100vh;
   display: grid;
-  grid-template-rows: 65px 1fr 65px;
   grid-template-columns: 1fr;
 }
 
@@ -14,5 +12,6 @@
 
 .App .Navbar,
 .App .Footer {
-
+  background-color: black;
+  color: white;
 }
