--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,19 @@
 .Navbar {
-  padding: 12px;
+  display: grid;
+  grid-template-columns: 1fr 0.15fr 0.15fr 0.15fr;
+  align-items: center;
+  height: 10vh;
+  column-gap: 4px;
+}
+
+.Navbar:nth-child(1) {
+  padding-left: 12px;
+}
+
+.contact {
+  padding-right: 12px;
+}
+
+p {
+  font-size: 1.15em;
 }
