--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -1,26 +1,48 @@
-.LandingPage {
-  height: 80vh;
-  display: grid;
-  grid-template-columns: 0.55fr 1fr;
+@media screen and (max-width: 480px) {
+  .LandingPage {
+    height: 80vh;
+  }
+
+  iframe {
+    margin-top: 20%;
+    width: 100%;
+    height: 100%;
+  }
+  p {
+    text-align: center;
+  }
 }
 
-.profile {
-  width: 100%;
-  display: grid;
-  justify-items: center;
-  align-items: center;
-}
+@media screen and (min-width: 480px) {
+  .LandingPage {
+    height: 80vh;
+    display: grid;
+    grid-template-columns: 0.55fr 1fr;
+  }
 
-.intro {
-  display: grid;
-  justify-items: center;
-  align-items: center;
-}
+  .profile {
+    width: 100%;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+  }
 
-.display {
-  background-color: lightgrey;
-  width: 100%;
-  display: grid;
-  justify-items: center;
-  align-items: center;
+  .intro {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+  }
+
+  .display {
+    background-color: lightgrey;
+    width: 100%;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+  }
+
+  iframe {
+    width: 80%;
+    height: 60%;
+  }
 }
