removed redundant media query

--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -1,4 +1,5 @@
 @media screen and (max-width: 480px) {
+  /* mobile */
   .LandingPage {
     height: 80vh;
   }
@@ -12,37 +13,35 @@
     text-align: center;
   }
 }
+/* regular screens */
+.LandingPage {
+  height: 80vh;
+  display: grid;
+  grid-template-columns: 0.55fr 1fr;
+}
 
-@media screen and (min-width: 480px) {
-  .LandingPage {
-    height: 80vh;
-    display: grid;
-    grid-template-columns: 0.55fr 1fr;
-  }
+.profile {
+  width: 100%;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
 
-  .profile {
-    width: 100%;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-  }
+.intro {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
 
-  .intro {
-    display: grid;
-    justify-items: center;
-    align-items: center;
-  }
+.display {
+  background-color: lightgrey;
+  width: 100%;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
 
-  .display {
-    background-color: lightgrey;
-    width: 100%;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-  }
-
-  iframe {
-    width: 80%;
-    height: 60%;
-  }
+iframe {
+  width: 80%;
+  height: 60%;
 }
