--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,11 +1,13 @@
 .Navbar {
+  height: 10vh;
   display: grid;
   grid-template-columns: 1fr 0.5fr;
+  align-items: center;
 }
 
 .title {
   text-align: left;
-  padding-left: 12px;
+  margin-left: 12px;
 }
 .nav {
   display: grid;
