--- a/src/pages/MediaPage.css
+++ b/src/pages/MediaPage.css
@@ -1,13 +1,15 @@
 @media screen and (max-width: 480px) {
   .MediaPage {
-    display: grid;
     height: 80vh;
+    display: grid;
+    justify-items: center;
+    align-items: center;
   }
 }
 
 @media screen and (min-width: 480px) {
   .MediaPage {
-    display: grid;
     height: 80vh;
+    display: grid;
   }
 }
