--- a/src/pages/ContactPage.css
+++ b/src/pages/ContactPage.css
@@ -11,5 +11,8 @@
   .ContactPage {
     height: 80vh;
     display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
   }
 }
