--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -23,7 +23,9 @@
   }
 
   .profile {
-    width: 100%;
+    display: grid;
+    justify-items: center;
+    align-items: center;
   }
 
   .display {
