--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,27 +1,53 @@
-.Navbar {
-  height: 10vh;
-  display: grid;
-  grid-template-columns: 1fr 0.5fr;
-  align-items: center;
-}
+@media screen and (max-width: 480px) {
+  .Navbar {
+    display: grid;
+    grid-template-columns: 1fr 0.15fr 0.15fr 0.15fr;
+    align-items: center;
+    overflow: hidden;
+    height: center;
+  }
 
-.title {
-  text-align: left;
-  margin-left: 12px;
-}
-.nav {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  color: white;
-}
+  .title {
+    text-align: left;
+  }
 
-.about,
-.media,
-.contact {
-  text-decoration: none;
-  color: white;
-}
+  .about,
+  .media,
+  .contact {
+    text-decoration: none;
+    color: white;
+  }
 
-p {
-  text-align: center;
+  p {
+    text-align: center;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .Navbar {
+    height: 10vh;
+    display: grid;
+    grid-template-columns: 1fr 0.15fr 0.15fr 0.15fr;
+    align-items: center;
+    overflow: hidden;
+    height: center;
+  }
+
+  .title {
+    text-align: left;
+  }
+
+  .about,
+  .media,
+  .contact {
+    text-decoration: none;
+    color: white;
+  }
+
+  p {
+    text-align: center;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
 }
