--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,3 +1,11 @@
-.Footer {
-  height: 10vh;
+@media screen and (max-width: 480px) {
+  .Footer {
+    visibility: hidden;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .Footer {
+    height: 10vh;
+  }
 }
