--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -5,14 +5,6 @@
     justify-items: center;
     align-items: center;
   }
-  iframe {
-    margin-bottom: 15%;
-    width: 100%;
-    height: 100%;
-  }
-  p {
-    text-align: center;
-  }
 }
 
 @media screen and (min-width: 480px) {
@@ -24,8 +16,9 @@
 
   .profile {
     display: grid;
-    justify-items: center;
     align-items: center;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   .display {
@@ -39,5 +32,9 @@
   iframe {
     width: 80%;
     height: 60%;
+  }
+
+  tab1 {
+    padding-left: 2em;
   }
 }
